--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.myreality.minelog</groupId>
   <artifactId>minelog</artifactId>
-  <version>1.7.2-SNAPSHOT</version>
+  <version>1.7.9</version>
   
   <repositories>
 		<repository>
@@ -16,7 +16,7 @@
 			<groupId>org.bukkit</groupId>
 			<artifactId>bukkit</artifactId>
 			<!-- Bukkit API Version, change if necessary -->
-			<version>1.7.2-R0.1-SNAPSHOT</version>
+			<version>1.7.9-R0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 	
